--- a/setup.cfg
+++ b/setup.cfg
@@ -24,5 +24,5 @@ testpaths = tests
 
 [tool:isort]
 profile = black
-known_first_party = bitcoinrpc, tests
+known_first_party = ecashrpc, tests
 known_third_party = httpx, orjson, typing_extensions, pytest
